fix(text-input): eliminate gap between text field and validation message

--- a/src/components/text-input/_text-input.scss
+++ b/src/components/text-input/_text-input.scss
@@ -76,15 +76,15 @@
     }
 
     &[data-toggle-password-visibility] + .#{$prefix}--text-input--password__visibility {
-      position: relative;
       top: rem(-40px);
-      align-self: flex-end;
       display: flex;
       justify-content: center;
+      align-self: flex-end;
       align-items: center;
       order: 3;
       height: rem(40px);
       width: rem(40px);
+      margin-top: rem(-40px);
       padding: 0;
       border: 0;
       background: none;
